Fix header alignment on smaller devices

--- a/src/styles/container.module.css
+++ b/src/styles/container.module.css
@@ -1,6 +1,6 @@
 .container {
   margin: 0 auto;
-  max-width: 600px;
+  max-width: 700px;
   height: max-content;
 }
 
